# pariVaha

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak
src/parivaha/: __init__.py  cli.py  config.py  obsidian_io.py  progress.py  seed.py  sync.py  utils.py  vault.py
src/parivaha/.config/: env.example  sample_payload.json  sync_config.json  sync_log.json
tests/: test_cli.py
